--- a/example/android/app/src/main/res/layout/activity_sample.xml
+++ b/example/android/app/src/main/res/layout/activity_sample.xml
@@ -4,15 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <pub.doric.navbar.BaseDoricNavBar
+        android:id="@+id/doric_nav_bar"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:gravity="center"
-        android:text="Dangle Demo"
-        android:textStyle="bold" />
+        android:layout_height="44dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/sample_rv"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
